# rust-solutions

./: .gitignore
catr/: Cargo.toml
catr/src/: main.rs
catr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: main.rs
headr/: Cargo.toml
headr/src/: main.rs
headr/tests/: cli.rs
headr/tests/expected/: all.n2.out  all.n4.out  all.out  one.txt.n4.out  three.txt.out  two.txt.out
uniqr/: Cargo.toml
uniqr/src/: main.rs
wcr/: Cargo.toml  mk-outs.sh
wcr/src/: main.rs
wcr/tests/: cli.rs
